[gd_scene load_steps=5 format=3 uid="uid://c63wng7gvpv7e"]

[ext_resource type="Theme" uid="uid://jrlselt3bfqh" path="res://Art/UI/StandardButton.tres" id="1_6bua4"]
[ext_resource type="Script" path="res://UI/Menus/Server Connecting/scripts/waiting_room.gd" id="1_s1ky8"]
[ext_resource type="FontFile" uid="uid://hisxnsk1olxb" path="res://Art/Fonts/m3x6.ttf" id="4_l0ipg"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_sgwn8"]
properties/0/path = NodePath("VBoxContainer/HBoxContainer/TutorialBtn:button_pressed")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("VBoxContainer/HBoxContainer/PartyBtn:button_pressed")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("VBoxContainer/HBoxContainer/CoopBtn:button_pressed")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:hover_on_gotogame")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:gameMode")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="WaitingRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_s1ky8")

[node name="IPAddress" type="Label" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = -4.0
offset_right = 386.0
offset_bottom = 25.0
scale = Vector2(0.569726, 0.515493)
theme_override_fonts/font = ExtResource("4_l0ipg")
theme_override_font_sizes/font_size = 36
text = "IP Address:"

[node name="UserIDLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -3.0
offset_right = 144.0
offset_bottom = 23.0
scale = Vector2(0.569726, 0.515493)
theme_override_fonts/font = ExtResource("4_l0ipg")
theme_override_font_sizes/font_size = 36
text = "User ID: "

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 10.0
offset_right = 716.0
offset_bottom = 378.0
scale = Vector2(0.887688, 0.483816)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.12784
offset_top = 1.57426
offset_right = 1.12784
offset_bottom = 1.57426
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.993627, 0.995313)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 186.0
offset_right = 724.0
offset_bottom = 425.0
scale = Vector2(0.876473, 0.728186)
theme = ExtResource("1_6bua4")

[node name="TooltipLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Select one of the three game modes"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TutorialBtn" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
action_mode = 0
text = "Tutorial"
alignment = 1

[node name="PartyBtn" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Party"

[node name="CoopBtn" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Co-op
"

[node name="GoToGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.454902, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Go to game!"

[node name="ExitRoomBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Exit Room"

[node name="CancelHostBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Cancel Hosting Session"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="VBoxContainer"]
root_path = NodePath("../..")
replication_config = SubResource("SceneReplicationConfig_sgwn8")

[node name="PopupPanel" type="PopupPanel" parent="."]
initial_position = 2
size = Vector2i(260, 60)
transparent = true

[node name="ColorRect" type="ColorRect" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.27451, 0.627451, 1)

[node name="ErrorMsgLabel" type="Label" parent="PopupPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_l0ipg")
theme_override_font_sizes/font_size = 24
text = "No valid game mode selected!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TutorialBtn" to="." method="_on_tutorial_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PartyBtn" to="." method="_on_party_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CoopBtn" to="." method="_on_coop_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitRoomBtn" to="." method="_on_exit_room_btn_pressed"]
